--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "concurrently": "^8.2.2",
+    "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
